@@ -18,10 +18,7 @@ import org.bukkit.entity.Player;
 import org.ipvp.canvas.mask.BinaryMask;
 import org.ipvp.canvas.mask.Mask;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 
 public class MaterialSelectionMenu extends AbstractMenu {
 
@@ -33,11 +30,12 @@ public class MaterialSelectionMenu extends AbstractMenu {
     private final Object object;
     private final boolean alreadyExists;
 
-    /** In this menu the player can select a material for a warp.
+    /**
+     * In this menu the player can select a material for a warp.
      * This can be used for example to change the material of a warp in the {@link WarpMenu}.
      *
-     * @param menuPlayer  The player that is viewing the menu.
-     * @param object The Warp or WarpGroup that is being updated with the selected material.
+     * @param menuPlayer    The player that is viewing the menu.
+     * @param object        The Warp or WarpGroup that is being updated with the selected material.
      * @param alreadyExists Whether the warp already exists.
      */
     public MaterialSelectionMenu(Player menuPlayer, Object object, boolean alreadyExists) {
@@ -48,12 +46,12 @@ public class MaterialSelectionMenu extends AbstractMenu {
 
     @Override
     protected void setMenuItemsAsync() {
-        getMenu().getSlot(MATERIAL_SLOT).setItem(Item.create(XMaterial.STONE.get(), "§6§lItem", ListUtil.createList("", "Change the material of the warp", "to a minecraft item.", "", "§eExample:", "Stone")));
+        getMenu().getSlot(MATERIAL_SLOT).setItem(Item.create(Objects.requireNonNull(XMaterial.STONE.get()), "§6§lItem", ListUtil.createList("", "Change the material of the warp", "to a minecraft item.", "", "§eExample:", "Stone")));
         getMenu().getSlot(CUSTOM_HEAD_SLOT).setItem(HeadFactory.letter(LetterType.WOODEN, '?', "§6§lCustom Head", ListUtil.createList("", "Change the material of the warp", "to a custom head texture URL.", "", "§eExample:", "https://textures.minecraft.net/texture/...")));
 
-        if(object instanceof Warp)
+        if (object instanceof Warp)
             setBackItem(BACK_ITEM_SLOT, new WarpEditMenu(getMenuPlayer(), (Warp) object, alreadyExists, false));
-        else if(object instanceof WarpGroup)
+        else if (object instanceof WarpGroup)
             setBackItem(BACK_ITEM_SLOT, new WarpGroupEditMenu(getMenuPlayer(), (WarpGroup) object, alreadyExists, false));
     }
 
@@ -73,7 +71,7 @@ public class MaterialSelectionMenu extends AbstractMenu {
                             return Collections.emptyList();
 
                         // Make sure that the material is valid
-                        if(Item.fromUniqueMaterialString(stateSnapshot.getText()) == null){
+                        if (Item.fromUniqueMaterialString(stateSnapshot.getText()) == null) {
                             return Arrays.asList(
                                     AnvilGUI.ResponseAction.close(),
                                     AnvilGUI.ResponseAction.run(() -> {
@@ -89,9 +87,9 @@ public class MaterialSelectionMenu extends AbstractMenu {
                         return Arrays.asList(
                                 AnvilGUI.ResponseAction.close(),
                                 AnvilGUI.ResponseAction.run(() -> {
-                                    if(object instanceof Warp)
+                                    if (object instanceof Warp)
                                         ((Warp) object).setMaterial(stateSnapshot.getText().toUpperCase());
-                                    else if(object instanceof WarpGroup)
+                                    else if (object instanceof WarpGroup)
                                         ((WarpGroup) object).setMaterial(stateSnapshot.getText().toUpperCase());
 
                                     openObjectMenu();
@@ -99,7 +97,7 @@ public class MaterialSelectionMenu extends AbstractMenu {
                         );
                     })
                     .text("Material")
-                    .itemLeft(Item.create(XMaterial.NAME_TAG.parseMaterial(), "§6§lEnter Material Name"))
+                    .itemLeft(Item.create(Objects.requireNonNull(XMaterial.NAME_TAG.get()), "§6§lEnter Material Name"))
                     .title("§8Enter Material Name")
                     .plugin(BuildTeamTools.getInstance())
                     .open(clickPlayer);
@@ -116,7 +114,7 @@ public class MaterialSelectionMenu extends AbstractMenu {
             BookMenu bookMenu = new BookMenu(clickPlayer, "§6§lChange Texture URL", clickPlayer.getName(), content, 240);
 
             bookMenu.onComplete((text) -> {
-                if(text == null) {
+                if (text == null) {
                     clickPlayer.playSound(clickPlayer.getLocation(), Sound.ENTITY_ITEM_BREAK, 1.0F, 1.0F);
                     clickPlayer.sendMessage("§cA problem occurred while saving the url.");
                     openObjectMenu();
@@ -124,19 +122,19 @@ public class MaterialSelectionMenu extends AbstractMenu {
                 }
 
                 // Combine the first page to a single string
-                StringBuilder finalText = new StringBuilder(text.get(0)[0]);
-                for(int i = 1; i < text.get(0).length; i++)
-                    finalText.append(text.get(0)[i]);
+                StringBuilder finalText = new StringBuilder(text.getFirst()[0]);
+                for (int i = 1; i < text.getFirst().length; i++)
+                    finalText.append(text.getFirst()[i]);
 
-                if(!finalText.toString().startsWith("http://textures.minecraft.net/texture/")){
+                if (!finalText.toString().startsWith("http://textures.minecraft.net/texture/")) {
                     clickPlayer.playSound(clickPlayer.getLocation(), Sound.ENTITY_ITEM_BREAK, 1.0F, 1.0F);
                     clickPlayer.sendMessage("§cThe URL must start with http://textures.minecraft.net/texture/");
                     openObjectMenu();
                 }
 
-                if(object instanceof Warp)
+                if (object instanceof Warp)
                     ((Warp) object).setMaterial(finalText.toString());
-                else if(object instanceof WarpGroup)
+                else if (object instanceof WarpGroup)
                     ((WarpGroup) object).setMaterial(finalText.toString());
 
                 openObjectMenu();
@@ -148,17 +146,17 @@ public class MaterialSelectionMenu extends AbstractMenu {
     protected Mask getMask() {
         return BinaryMask.builder(getMenu())
                 .item(MenuItems.ITEM_BACKGROUND)
-                .pattern("000000000")
-                .pattern("000000000")
-                .pattern("000000000")
+                .pattern(BinaryMask.EMPTY_PATTERN)
+                .pattern(BinaryMask.EMPTY_PATTERN)
+                .pattern(BinaryMask.EMPTY_PATTERN)
                 .pattern("011111111")
                 .build();
     }
 
-    private void openObjectMenu(){
-        if(object instanceof Warp)
+    private void openObjectMenu() {
+        if (object instanceof Warp)
             new WarpEditMenu(getMenuPlayer(), (Warp) object, alreadyExists, true);
-        else if(object instanceof WarpGroup)
+        else if (object instanceof WarpGroup)
             new WarpGroupEditMenu(getMenuPlayer(), (WarpGroup) object, alreadyExists, true);
     }
 }
